# catkin_ws

devel/: .catkin  local_setup.sh  setup.sh
devel/include/vgn/: GetMapCloud.h  GetMapCloudRequest.h  GetMapCloudResponse.h  GetSceneCloud.h  GetSceneCloudRequest.h  GetSceneCloudResponse.h  GraspConfig.h  PredictGrasps.h  PredictGraspsRequest.h  PredictGraspsResponse.h
devel/lib/pkgconfig/: beginner_tutorials.pc  robotiq_2f_140_gripper_gazebo.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc
devel/lib/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server_client_test  robotiq_2f_gripper_action_server_node
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/robotiq_2f_140_gripper_gazebo/cmake/: robotiq_2f_140_gripper_gazeboConfig.cmake
devel/share/robotiq_2f_140_gripper_visualization/cmake/: robotiq_2f_140_gripper_visualizationConfig.cmake
devel/share/robotiq_2f_c2_gripper_visualization/cmake/: robotiq_2f_c2_gripper_visualizationConfig.cmake
devel/share/robotiq_2f_gripper_action_server/cmake/: robotiq_2f_gripper_action_serverConfig.cmake
devel/share/robotiq_2f_gripper_control/cmake/: robotiq_2f_gripper_control-msg-extras.cmake  robotiq_2f_gripper_control-msg-paths.cmake  robotiq_2f_gripper_controlConfig.cmake
src/VoxPoser/: test.py
src/VoxPoser/src/: LMP.py
src/beginner_tutorials/scripts/: listener.py  talker.py
src/drawer/: CMakeLists.txt  frames.gv  package.xml  setup.py
src/drawer/.denv/: pyvenv.cfg
src/drawer/cfg/hw/: ur5e_drawer.yaml
src/drawer/launch/: ur5e_drawer.launch
src/drawer/nodes/: drawer_server.py
src/drawer/scripts/: ur5e_move.py
src/drawer/src/drawer/: convex.py  drawer_detection.py  plane_detection.py  yolo_detection.py
src/drawer/srv/: Concave.srv  Convex.srv  DrawerDetection.srv  PlaneDetection.srv  SideConcave.srv  YoloDetection.srv
src/robot_helpers/robot_helpers/: spatial.py
src/vgn/: roob_test.py  test.py
src/vgn/launch/: ur5e_drawer_grasp.launch  ur5e_grasp.launch  ur5e_inside_grasp.launch
src/vgn/nodes/: tsdf_server.py  vgn_server.py
src/vgn/scripts/: ur5e_drawer_grasp.py  ur5e_grasp.py  ur5e_inside_grasp.py
(+53 files in other folders)
